# pointer

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  index.html  package-lock.json  package.json
appnext/: layout.tsx  page.tsx  pointer.tsx  providers.tsx  theme.tsx
appnext/[noteid]/: kk.tsx  layout.tsx  page.tsx
infra/: Cargo.toml
infra/src/: lib.rs  main.rs  model.rs  ot.rs  pointer.rs
public/: sample1.txt  sample2.txt
src/: App.tsx  ConnectionStatus.tsx  User.tsx  const.ts  index.tsx  pointer.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
