[package]
name = "wasm"
version = "0.1.0"
authors = ["Dongxiao Han <patrick_han_2@outlook.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.

[dependencies]
bytecount = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
operational-transform = { version = "0.6.0", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
wasm-bindgen = "0.2"
js-sys = "0.3.51"

[dev-dependencies]
wasm-bindgen-test = "0.3"
